placeholder for compiling implementation. This does not reset the head properly when inserting

--- a/PriorityQueue/PriorityQueue/PriorityQueue.vcxproj
+++ b/PriorityQueue/PriorityQueue/PriorityQueue.vcxproj
@@ -20,10 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Driver.cpp" />
+    <ClCompile Include="..\..\pqqueue.cpp" />
     <ClCompile Include="..\..\PriorityString.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\d_except.h" />
+    <ClInclude Include="..\..\LinkedList\Node.h" />
     <ClInclude Include="..\..\List1.h" />
     <ClInclude Include="..\..\Node1.h" />
     <ClInclude Include="..\..\pqqueue.h" />
