switched to my list. Not quite finished, there is still an issue when inserting priority values already in the list, and we need a const iterator to remove all of the const_cast operations.

--- a/PriorityQueue/LinkedList/LinkedList.vcxproj.filters
+++ b/PriorityQueue/LinkedList/LinkedList.vcxproj.filters
@@ -15,25 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Driver.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\PriorityString.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\pqqueue.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="..\..\LinkedList\basic_node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LinkedList\List.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LinkedList\Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\d_except.h">
+    <None Include="..\..\LinkedList\basic_node_iterator.tpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\pqqueue.h">
+    </None>
+    <None Include="..\..\LinkedList\List.tpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\PriorityString.h">
+    </None>
+    <None Include="..\..\LinkedList\NodeIterator.tpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\LinkedList\LinkedListTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
